--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "generate-unique-id": "^2.0.3",
+    "method-override": "^3.0.0",
     "mongoose": "^7.5.1",
     "nodemon": "^3.0.1"
   }
