--- a/package.json
+++ b/package.json
@@ -1,20 +1,21 @@
 {
-  "name": "pasteservice",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "dotenv": "^16.3.1",
-    "ejs": "^3.1.9",
-    "express": "^4.18.2",
-    "generate-unique-id": "^2.0.3",
-    "method-override": "^3.0.0",
-    "mongoose": "^7.5.1",
-    "nodemon": "^3.0.1"
-  }
+    "name": "pasteservice",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "node app.js"
+    },
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "dotenv": "^16.3.1",
+        "ejs": "^3.1.9",
+        "express": "^4.18.2",
+        "generate-unique-id": "^2.0.3",
+        "method-override": "^3.0.0",
+        "mongoose": "^7.5.1",
+        "nodemon": "^3.0.1"
+    }
 }
