--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+    "engines": {
+        "node": ">=16.0.0"
+    },
     "name": "pasteservice",
     "version": "1.0.0",
     "description": "",
