--- a/vercel.json
+++ b/vercel.json
@@ -8,7 +8,7 @@
     ],
     "routes": [
         {
-            "Src": "/(.*)",
+            "src": "/(.*)",
             "dest": "/"
         }
     ]
